--- a/rust-axum/Cargo.toml
+++ b/rust-axum/Cargo.toml
@@ -7,15 +7,17 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"]}
 axum-extra = "0.10.1"
+chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.41", features = ["derive", "env"]}
 http = "1.3.1"
 serde = { version = "1.0.219", features = ["derive"]}
-sqlx = { version = "0.8.6", features = ["sqlite"] }
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["full"] }
 tower = { version = "0.5.2", features = ["timeout", "limit"]}
 tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout", "normalize-path", "compression-gzip", "limit", "sensitive-headers"] }
 tracing = "0.1.41"
+ulid = { version = "1.2.1", features = ["serde"] }
 
 [dev-dependencies]
 axum-test = "17.3.0"
