--- a/rust-axum/Cargo.toml
+++ b/rust-axum/Cargo.toml
@@ -16,8 +16,10 @@ thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["full"] }
 tower = { version = "0.5.2", features = ["timeout", "limit"]}
 tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout", "normalize-path", "compression-gzip", "limit", "sensitive-headers"] }
+tower-sessions = "0.14.0"
 tracing = "0.1.41"
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
+webauthn-rs = "0.5.2"
 
 [dev-dependencies]
 axum-test = "17.3.0"
