--- a/rust-axum/Cargo.toml
+++ b/rust-axum/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"]}
 axum-extra = "0.10.1"
+axum-jwt-oidc = "0.1.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.41", features = ["derive", "env"]}
 http = "1.3.1"
