--- a/rust-axum/Cargo.toml
+++ b/rust-axum/Cargo.toml
@@ -11,6 +11,7 @@ axum-jwt-oidc = "0.1.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.41", features = ["derive", "env"]}
 http = "1.3.1"
+jsonwebtoken = "9.3.1"
 serde = { version = "1.0.219", features = ["derive"]}
 sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
 thiserror = "2.0.12"
