chore: working on pdf extraction

--- a/rust-egui/Cargo.toml
+++ b/rust-egui/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dirs = "6.0.0"
 eframe = { git = "https://github.com/emilk/egui", branch = "main" }
+lopdf = "0.36.0"
 rfd = "0.15.4"
