--- a/rust-egui/Cargo.toml
+++ b/rust-egui/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 dirs = "6.0.0"
-eframe = { git = "https://github.com/emilk/egui", branch = "main" }
+eframe = "0.32.0"
+egui_material_icons = "0.4.0"
 lopdf = "0.36.0"
 rfd = "0.15.4"
