--- a/rust-egui-markdown/Cargo.toml
+++ b/rust-egui-markdown/Cargo.toml
@@ -9,3 +9,4 @@ eframe = { git = "https://github.com/emilk/egui", branch = "main" }
 egui = "0.32.0"
 egui_demo_lib = "0.32.0"
 rfd = "0.15.4"
+ropey = "2.0.0-beta.1"
