--- a/rust-egui-markdown/Cargo.toml
+++ b/rust-egui-markdown/Cargo.toml
@@ -11,4 +11,4 @@ egui_demo_lib = "0.32.0"
 rfd = "0.15.4"
 ropey = "2.0.0-beta.1"
 thiserror = "2.0.13"
-uuid = "1.18.0"
+uuid = { version = "1.18.0", features = ["v4"]}
