--- a/rust-egui-markdown/Cargo.toml
+++ b/rust-egui-markdown/Cargo.toml
@@ -10,5 +10,6 @@ egui = "0.32.0"
 egui_demo_lib = "0.32.0"
 rfd = "0.15.4"
 ropey = "2.0.0-beta.1"
+serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.13"
-uuid = { version = "1.18.0", features = ["v4"]}
+uuid = { version = "1.18.0", features = ["v4", "serde"] }
