--- a/bun-xml/package.json
+++ b/bun-xml/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "fast-xml-parser": "^5.2.5",
     "ts-pattern": "^5.8.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.2.20"
   }
 }
