--- a/bun-xml/package.json
+++ b/bun-xml/package.json
@@ -4,6 +4,7 @@
     "ts-pattern": "^5.8.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.20"
+    "@types/bun": "^1.2.20",
+    "lodash": "^4.17.21"
   }
 }
