--- a/rust-egui-markdown/Cargo.toml
+++ b/rust-egui-markdown/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.88"
 dirs = "6.0.0"
 eframe = { git = "https://github.com/emilk/egui", branch = "main" }
 egui = "0.32.0"
