--- a/rust-core-drafts/Cargo.toml
+++ b/rust-core-drafts/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 chrono = "0.4.41"
 eframe = "0.32.0"
+nutype = "0.6.2"
 ropey = "1.6.1"
 serde = "1.0.219"
 sqlx = "0.8.6"
