--- a/rust-egui-markdown/Cargo.toml
+++ b/rust-egui-markdown/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.88"
+bon = "3.7.1"
 dirs = "6.0.0"
 eframe = { git = "https://github.com/emilk/egui", branch = "main" }
 egui = "0.32.0"
